--- a/Vision Core.css
+++ b/Vision Core.css
@@ -635,19 +635,33 @@ section.tags a.tag::before {
 /* Post footer */
 
 article footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 24px;
   color: rgba(var(--title), 0.65);
   margin-top: 1em;
 }
 
 article footer a {
   color: inherit;
-  font-weight: bold;
   text-decoration: none;
+}
+
+.note-count {
+  font-weight: bold;
+}
+
+.controls {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
 .controls .like_button,
 .controls .reblog_button {
-  float: right;
+  position: relative;
   margin-left: 12px;
 }
 
@@ -659,11 +673,12 @@ article footer a {
 
 .controls .like_button::before,
 .controls .reblog_button::before {
+  position: absolute;
+  top: 0;
+  left: 0;
   font-family: "optica-icons";
   font-size: 24px;
-  font-weight: normal;
-  position: absolute;
-  margin: -5px 0 0 -3px;
+  line-height: 1;
 }
 
 .controls .reblog_button::before {
