make post tags line up with pinned post label

--- a/Vision Core.css
+++ b/Vision Core.css
@@ -605,6 +605,9 @@ section.submitter a {
 /* Tags */
 
 section.tags {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   margin-top: .625rem;
 }
 
