--- a/Vision Core.css
+++ b/Vision Core.css
@@ -25,6 +25,10 @@ p, h2, h1, blockquote, ul, ol {
   margin: 1rem 0;
 }
 
+small {
+  font-size: small;
+}
+
 a {
   color: rgb(var(--accent));
   text-decoration: none;
